--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -13,3 +13,13 @@ allowed-tags:
   - news
   - troubleshooting
   - mobile
+  - "Plan Común"
+  - "Fundamentos de Informática"
+  - "Humanistas, libres y deportes"
+  - "Transversal e Integración"
+  - "Sistemas de decisión informática"
+  - "Industrias"
+  - "Ingeniería de Software"
+  - "Infraestructura TIC"
+  - "Análisis Numérico"
+  - "Electivos Informática"
