Semestre 9 y algunos electivos (los electivos no se ven)

--- a/_data/sidebars/main_sidebar.yml
+++ b/_data/sidebars/main_sidebar.yml
@@ -96,3 +96,11 @@ entries:
         - title: Física General III
           url: /semestre3_FIS130.html
           output: web
+
+      - title: Semestre 9
+        output: web
+        subfolderitems:
+
+        - title: Gestion de Proyectos de Informatica
+          url: /semestre9_GESTIP.html
+          output: web
