--- a/_data/sidebars/main_sidebar.yml
+++ b/_data/sidebars/main_sidebar.yml
@@ -65,10 +65,24 @@ entries:
         output: web
         subfolderitems:
 
-        - title: Collaboration pages
-          url: /tag_collaboration.html
+        - title: Ed. Física II
+          url: /semestre2_DEW101.html
           output: web
 
-        - title: Troubleshooting pages
-          url: /tag_troubleshooting.html
+        - title: Física General I
+          url: /semestre2_FIS110.html
           output: web
+
+        - title: Introducción A La Ingeniería
+          url: /semestre2_IWG101.html
+          output: web
+
+        - title: Matemática II
+          url: /semestre2_MAT022.html
+          output: web
+
+        - title: Química Y Sociedad
+          url: /semestre2_QUI010.html
+          output: web
+
+          
