--- a/_data/sidebars/main_sidebar.yml
+++ b/_data/sidebars/main_sidebar.yml
@@ -26,7 +26,7 @@ entries:
           output: web
 
         - title: Preguntas Frecuentes
-          url: /semestre1_MAT021.html
+          url: /preguntas.html
           output: web
 
         - title: Línks de interés
