--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,12 @@ topnav_title: UTFSM Survival
 site_title: UTFSM students survival guide
 
 # this appears in the footer
-company_name: Ceeinf UTFSM + redhelper
+# company_name: Ceeinf UTFSM + redhelper
+
+organization_name: Ceeinf UTFSM
+organization_site: https://github.com/CEEINF-UTFSM
+creator_name: redhelper
+creator_site: https://github.com/redhelper
 
 # if you have google-analytics ID, put it in. if not, edit this value to blank.
 google_analytics: 
