aorita si que si joben

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@ site_title: UTFSM students survival guide
 
 organization_name: Ceeinf UTFSM
 organization_site: https://github.com/CEEINF-UTFSM
-creator_name: redhelper
+creator_user: redhelper
+creator_name: Rafael Calvo
 creator_site: https://github.com/redhelper
 
 # if you have google-analytics ID, put it in. if not, edit this value to blank.
